--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Fathym, Inc",
   "main": "lcu.json",
   "scripts": {
-    "deploy": "npx fathym git && npm version patch --tag thinky && npm publish --access public && fathym git"
+    "deploy": "npx fathym git && npm version patch --tag thinky && npm publish --access public --tag thinky && fathym git"
   },
   "keywords": [
     "lowcodeunit",
